--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,17 +1,17 @@
 # 2023-10-14
 
-共 186 条
+共 200 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 14:01:02 GMT+0800 (China Standard Time) -->
-1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
-1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
-1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
-1. [辱骂新加坡护士的中国女子认罪道歉](https://so.toutiao.com/search?keyword=辱骂新加坡护士的中国女子认罪道歉)
+<!-- 最后更新时间 Sat Oct 14 2023 15:00:40 GMT+0800 (China Standard Time) -->
+1. [BBC记者在以色列被警察持枪袭击](https://so.toutiao.com/search?keyword=BBC记者在以色列被警察持枪袭击)
 1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
-1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
-1. [林志颖挑战四米高台表演](https://so.toutiao.com/search?keyword=林志颖挑战四米高台表演)
+1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
 1. [“多尔衮行宫”报价1.8亿挂牌出售](https://so.toutiao.com/search?keyword=“多尔衮行宫”报价1.8亿挂牌出售)
+1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
+1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
+1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
+1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
 1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
 1. [官方辟谣女生给男生下毒致身亡](https://so.toutiao.com/search?keyword=官方辟谣女生给男生下毒致身亡)
 1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
@@ -19,36 +19,56 @@
 1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
 1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
 1. [台军：哈马斯的饱和攻击没人能招架](https://so.toutiao.com/search?keyword=台军：哈马斯的饱和攻击没人能招架)
-1. [居民举报无人机对着窗口挨家挨户看](https://so.toutiao.com/search?keyword=居民举报无人机对着窗口挨家挨户看)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
-1. [媒体：中俄经贸合作量质并进](https://so.toutiao.com/search?keyword=媒体：中俄经贸合作量质并进)
-1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
 1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
-1. [韩文秀已任中央农办主任](https://so.toutiao.com/search?keyword=韩文秀已任中央农办主任)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
+1. [以军称哈马斯空中部队负责人被打死](https://so.toutiao.com/search?keyword=以军称哈马斯空中部队负责人被打死)
+1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
 1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
-1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
+1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
+1. [专家：戴口罩能有效预防支原体肺炎](https://so.toutiao.com/search?keyword=专家：戴口罩能有效预防支原体肺炎)
+1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
+1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
+1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
+1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
+1. [2024国考计划招录3.96万人](https://so.toutiao.com/search?keyword=2024国考计划招录3.96万人)
+1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
+1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
+1. [五旬大姐整形失败怒斥机构是无赖](https://so.toutiao.com/search?keyword=五旬大姐整形失败怒斥机构是无赖)
+1. [伊朗就60亿美元解冻协议喊话美国](https://so.toutiao.com/search?keyword=伊朗就60亿美元解冻协议喊话美国)
+1. [舒默将率领美国国会代表团访以色列](https://so.toutiao.com/search?keyword=舒默将率领美国国会代表团访以色列)
+1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
+1. [女子与丈夫相恋13年 越来越好看](https://so.toutiao.com/search?keyword=女子与丈夫相恋13年+越来越好看)
+1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
+1. [孙海洋：孙卓是通过人脸识别找到的](https://so.toutiao.com/search?keyword=孙海洋：孙卓是通过人脸识别找到的)
+1. [国足战乌兹别克斯坦将主推防守阵型](https://so.toutiao.com/search?keyword=国足战乌兹别克斯坦将主推防守阵型)
+1. [江苏省政府领导工作分工公布](https://so.toutiao.com/search?keyword=江苏省政府领导工作分工公布)
+1. [金价走势一波三折 如何有效避险](https://so.toutiao.com/search?keyword=金价走势一波三折+如何有效避险)
+1. [博主揭贵州车站一柜台金镶玉骗局](https://so.toutiao.com/search?keyword=博主揭贵州车站一柜台金镶玉骗局)
+1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
+1. [哈尔滨市公安局原副局长曹振河被查](https://so.toutiao.com/search?keyword=哈尔滨市公安局原副局长曹振河被查)
+1. [女子偷玉米被发现下跪求饶](https://so.toutiao.com/search?keyword=女子偷玉米被发现下跪求饶)
+1. [96岁母亲上厕所摔倒60岁女儿扶不动](https://so.toutiao.com/search?keyword=96岁母亲上厕所摔倒60岁女儿扶不动)
+1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
+1. [两位美高官同中方赴美学者座谈交流](https://so.toutiao.com/search?keyword=两位美高官同中方赴美学者座谈交流)
+1. [《为有暗香来》开播](https://so.toutiao.com/search?keyword=《为有暗香来》开播)
+1. [C罗将在明年迎来第六届欧洲杯](https://so.toutiao.com/search?keyword=C罗将在明年迎来第六届欧洲杯)
+1. [主持人赵普悼念导演郭宝昌](https://so.toutiao.com/search?keyword=主持人赵普悼念导演郭宝昌)
+1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
+1. [辱骂新加坡护士的中国女子认罪道歉](https://so.toutiao.com/search?keyword=辱骂新加坡护士的中国女子认罪道歉)
+1. [林志颖挑战四米高台表演](https://so.toutiao.com/search?keyword=林志颖挑战四米高台表演)
+1. [居民举报无人机对着窗口挨家挨户看](https://so.toutiao.com/search?keyword=居民举报无人机对着窗口挨家挨户看)
+1. [媒体：中俄经贸合作量质并进](https://so.toutiao.com/search?keyword=媒体：中俄经贸合作量质并进)
+1. [韩文秀已任中央农办主任](https://so.toutiao.com/search?keyword=韩文秀已任中央农办主任)
 1. [村干部掌掴13岁女孩被其父打断鼻骨](https://so.toutiao.com/search?keyword=村干部掌掴13岁女孩被其父打断鼻骨)
 1. [美国会报告鼓吹准备同时与中俄开战](https://so.toutiao.com/search?keyword=美国会报告鼓吹准备同时与中俄开战)
 1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
-1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
 1. [加沙断电了医院的新生儿怎么办](https://so.toutiao.com/search?keyword=加沙断电了医院的新生儿怎么办)
-1. [伊朗就60亿美元解冻协议喊话美国](https://so.toutiao.com/search?keyword=伊朗就60亿美元解冻协议喊话美国)
-1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
 1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
-1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
 1. [律师：手机直播演唱会存在侵权风险](https://so.toutiao.com/search?keyword=律师：手机直播演唱会存在侵权风险)
-1. [孙海洋：孙卓是通过人脸识别找到的](https://so.toutiao.com/search?keyword=孙海洋：孙卓是通过人脸识别找到的)
-1. [哈尔滨市公安局原副局长曹振河被查](https://so.toutiao.com/search?keyword=哈尔滨市公安局原副局长曹振河被查)
 1. [老人逆行致堵塞 交警鞠躬请其退回](https://so.toutiao.com/search?keyword=老人逆行致堵塞+交警鞠躬请其退回)
-1. [C罗将在明年迎来第六届欧洲杯](https://so.toutiao.com/search?keyword=C罗将在明年迎来第六届欧洲杯)
 1. [白百何带二胎儿子出门玩耍](https://so.toutiao.com/search?keyword=白百何带二胎儿子出门玩耍)
-1. [女子与丈夫相恋13年 越来越好看](https://so.toutiao.com/search?keyword=女子与丈夫相恋13年+越来越好看)
-1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
-1. [五旬大姐整形失败怒斥机构是无赖](https://so.toutiao.com/search?keyword=五旬大姐整形失败怒斥机构是无赖)
 1. [美军里根号航母停靠韩国 朝媒回应](https://so.toutiao.com/search?keyword=美军里根号航母停靠韩国+朝媒回应)
-1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
-1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
 1. [以军用了白磷弹？现场人员闻到蒜味](https://so.toutiao.com/search?keyword=以军用了白磷弹？现场人员闻到蒜味)
 1. [詹姆斯赛前热身各种暴扣应接不暇](https://so.toutiao.com/search?keyword=詹姆斯赛前热身各种暴扣应接不暇)
 1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
@@ -69,8 +89,6 @@
 1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
 1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
 1. [北方将受冷空气影响局地降温达10℃](https://so.toutiao.com/search?keyword=北方将受冷空气影响局地降温达10℃)
-1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
-1. [博主揭贵州车站一柜台金镶玉骗局](https://so.toutiao.com/search?keyword=博主揭贵州车站一柜台金镶玉骗局)
 1. [哈登：想在76人退役但球队无此打算](https://so.toutiao.com/search?keyword=哈登：想在76人退役但球队无此打算)
 1. [普京谈巴以冲突时提及列宁格勒战役](https://so.toutiao.com/search?keyword=普京谈巴以冲突时提及列宁格勒战役)
 1. [湖南婚车事故遇难新娘已怀有身孕](https://so.toutiao.com/search?keyword=湖南婚车事故遇难新娘已怀有身孕)
@@ -114,8 +132,6 @@
 1. [疯狂小杨哥三只羊控股集团完成更名](https://so.toutiao.com/search?keyword=疯狂小杨哥三只羊控股集团完成更名)
 1. [海关总署：进口规模逐季走高](https://so.toutiao.com/search?keyword=海关总署：进口规模逐季走高)
 1. [武大对性骚扰男生处分被指避重就轻](https://so.toutiao.com/search?keyword=武大对性骚扰男生处分被指避重就轻)
-1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
-1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
 1. [媒体谈为何俄对巴以冲突谨言慎行](https://so.toutiao.com/search?keyword=媒体谈为何俄对巴以冲突谨言慎行)
 1. [以方要求加沙北部上百万人迁至南部](https://so.toutiao.com/search?keyword=以方要求加沙北部上百万人迁至南部)
 1. [以色列集结大批坦克包围加沙](https://so.toutiao.com/search?keyword=以色列集结大批坦克包围加沙)
@@ -143,7 +159,6 @@
 1. [退休老人花20万买车遭孩子反对](https://so.toutiao.com/search?keyword=退休老人花20万买车遭孩子反对)
 1. [媒体：鼓励生育不能只盯着二孩](https://so.toutiao.com/search?keyword=媒体：鼓励生育不能只盯着二孩)
 1. [黄金价格或迎来历史新高](https://so.toutiao.com/search?keyword=黄金价格或迎来历史新高)
-1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
 1. [奥运冠军杨威自曝要终身佩戴呼吸机](https://so.toutiao.com/search?keyword=奥运冠军杨威自曝要终身佩戴呼吸机)
 1. [记者：驾车闯中领馆嫌犯身份曝光](https://so.toutiao.com/search?keyword=记者：驾车闯中领馆嫌犯身份曝光)
 1. [美国“左派”因为巴以起“内讧”](https://so.toutiao.com/search?keyword=美国“左派”因为巴以起“内讧”)
@@ -169,7 +184,6 @@
 1. [黎巴嫩将提交针对以色列的紧急抗议](https://so.toutiao.com/search?keyword=黎巴嫩将提交针对以色列的紧急抗议)
 1. [民众党坚持比民调 赵少康回应](https://so.toutiao.com/search?keyword=民众党坚持比民调+赵少康回应)
 1. [媒体评学校要求学生不带书包回家](https://so.toutiao.com/search?keyword=媒体评学校要求学生不带书包回家)
-1. [专家：戴口罩能有效预防支原体肺炎](https://so.toutiao.com/search?keyword=专家：戴口罩能有效预防支原体肺炎)
 1. [上海银行：起诉姚振华等六位相关方](https://so.toutiao.com/search?keyword=上海银行：起诉姚振华等六位相关方)
 1. [侯友宜对柯文哲阵营提出五大建议](https://so.toutiao.com/search?keyword=侯友宜对柯文哲阵营提出五大建议)
 1. [侯友宜：若胜选将追查绿电和进口蛋](https://so.toutiao.com/search?keyword=侯友宜：若胜选将追查绿电和进口蛋)
