--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,59 +1,79 @@
 # 2023-10-14
 
-共 214 条
+共 231 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 16:00:51 GMT+0800 (China Standard Time) -->
-1. [螳螂“大夫”为男子医治脖后瘊子](https://so.toutiao.com/search?keyword=螳螂“大夫”为男子医治脖后瘊子)
-1. [景德镇女孩的碎纸图案陶瓷被疯抢](https://so.toutiao.com/search?keyword=景德镇女孩的碎纸图案陶瓷被疯抢)
-1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
-1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
-1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
-1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
+<!-- 最后更新时间 Sat Oct 14 2023 17:00:36 GMT+0800 (China Standard Time) -->
+1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
 1. [“多尔衮行宫”报价1.8亿挂牌出售](https://so.toutiao.com/search?keyword=“多尔衮行宫”报价1.8亿挂牌出售)
-1. [孙海洋案判后寻子家长晕倒送医](https://so.toutiao.com/search?keyword=孙海洋案判后寻子家长晕倒送医)
+1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
+1. [孙宇鑫父亲今日离世捐献遗体](https://so.toutiao.com/search?keyword=孙宇鑫父亲今日离世捐献遗体)
+1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
+1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
+1. [BBC记者在以色列被警察持枪袭击](https://so.toutiao.com/search?keyword=BBC记者在以色列被警察持枪袭击)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
 1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
 1. [官方辟谣女生给男生下毒致身亡](https://so.toutiao.com/search?keyword=官方辟谣女生给男生下毒致身亡)
-1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
-1. [王毅谈巴以冲突症结和出路](https://so.toutiao.com/search?keyword=王毅谈巴以冲突症结和出路)
 1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
+1. [王毅谈巴以冲突症结和出路](https://so.toutiao.com/search?keyword=王毅谈巴以冲突症结和出路)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
+1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
+1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
+1. [“公募一哥”王亚伟一天内两度发声](https://so.toutiao.com/search?keyword=“公募一哥”王亚伟一天内两度发声)
+1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
+1. [河南一男子误喝汽车防冻液身亡](https://so.toutiao.com/search?keyword=河南一男子误喝汽车防冻液身亡)
+1. [感受山东大集的人间烟火](https://so.toutiao.com/search?keyword=感受山东大集的人间烟火)
+1. [景德镇女孩的碎纸图案陶瓷被疯抢](https://so.toutiao.com/search?keyword=景德镇女孩的碎纸图案陶瓷被疯抢)
+1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
+1. [1名记者死于以方炮击 古特雷斯致哀](https://so.toutiao.com/search?keyword=1名记者死于以方炮击+古特雷斯致哀)
+1. [“宝马女”母亲称女婿半年家暴7次](https://so.toutiao.com/search?keyword=“宝马女”母亲称女婿半年家暴7次)
+1. [数名欲从黎进入以的武装人员被打死](https://so.toutiao.com/search?keyword=数名欲从黎进入以的武装人员被打死)
+1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
+1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
+1. [女子偷玉米被发现下跪求饶](https://so.toutiao.com/search?keyword=女子偷玉米被发现下跪求饶)
+1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
+1. [全国多名纪检干部同日被查](https://so.toutiao.com/search?keyword=全国多名纪检干部同日被查)
+1. [一带一路帮中亚国家更好与世界接轨](https://so.toutiao.com/search?keyword=一带一路帮中亚国家更好与世界接轨)
+1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
+1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
+1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
+1. [保罗：这不是我第一次换队](https://so.toutiao.com/search?keyword=保罗：这不是我第一次换队)
+1. [美19名州长致信拜登要求明确支持以](https://so.toutiao.com/search?keyword=美19名州长致信拜登要求明确支持以)
+1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
+1. [长春交通治理引发争议](https://so.toutiao.com/search?keyword=长春交通治理引发争议)
+1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
+1. [张翰新剧搭档杨烁](https://so.toutiao.com/search?keyword=张翰新剧搭档杨烁)
+1. [女子用红绳绑鸡肉钓鱼真有鱼上钩了](https://so.toutiao.com/search?keyword=女子用红绳绑鸡肉钓鱼真有鱼上钩了)
+1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
+1. [湖北恩施政协副主席周辉军被查](https://so.toutiao.com/search?keyword=湖北恩施政协副主席周辉军被查)
+1. [广东男篮：周琦将于14日启程回国](https://so.toutiao.com/search?keyword=广东男篮：周琦将于14日启程回国)
+1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
+1. [华北南部黄淮等地大气扩散条件一般](https://so.toutiao.com/search?keyword=华北南部黄淮等地大气扩散条件一般)
+1. [五旬大姐整形失败怒斥机构是无赖](https://so.toutiao.com/search?keyword=五旬大姐整形失败怒斥机构是无赖)
+1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
+1. [男子骗女子同居生娃又骗百万积蓄](https://so.toutiao.com/search?keyword=男子骗女子同居生娃又骗百万积蓄)
+1. [台民调：74.4%支持两岸增进交流](https://so.toutiao.com/search?keyword=台民调：74.4%支持两岸增进交流)
+1. [曝美称阿塞拜疆或将对亚美尼亚动武](https://so.toutiao.com/search?keyword=曝美称阿塞拜疆或将对亚美尼亚动武)
+1. [螳螂“大夫”为男子医治脖后瘊子](https://so.toutiao.com/search?keyword=螳螂“大夫”为男子医治脖后瘊子)
+1. [孙海洋案判后寻子家长晕倒送医](https://so.toutiao.com/search?keyword=孙海洋案判后寻子家长晕倒送医)
+1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
 1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
 1. [台军：哈马斯的饱和攻击没人能招架](https://so.toutiao.com/search?keyword=台军：哈马斯的饱和攻击没人能招架)
-1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
-1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
-1. [BBC记者在以色列被警察持枪袭击](https://so.toutiao.com/search?keyword=BBC记者在以色列被警察持枪袭击)
 1. [伊朗就60亿美元解冻协议喊话美国](https://so.toutiao.com/search?keyword=伊朗就60亿美元解冻协议喊话美国)
-1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
-1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
-1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
-1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
-1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
 1. [国际金价连续9个交易日下跌](https://so.toutiao.com/search?keyword=国际金价连续9个交易日下跌)
-1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
-1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
 1. [杜小华发文报平安](https://so.toutiao.com/search?keyword=杜小华发文报平安)
-1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
 1. [两位美高官同中方赴美学者座谈交流](https://so.toutiao.com/search?keyword=两位美高官同中方赴美学者座谈交流)
 1. [柯文哲：胜选方式是我当正蓝推副手](https://so.toutiao.com/search?keyword=柯文哲：胜选方式是我当正蓝推副手)
 1. [京东物流成于京东困于京东](https://so.toutiao.com/search?keyword=京东物流成于京东困于京东)
 1. [记者：国足16日比赛压力不小](https://so.toutiao.com/search?keyword=记者：国足16日比赛压力不小)
-1. [“公募一哥”王亚伟一天内两度发声](https://so.toutiao.com/search?keyword=“公募一哥”王亚伟一天内两度发声)
 1. [金价走势一波三折 如何有效避险](https://so.toutiao.com/search?keyword=金价走势一波三折+如何有效避险)
 1. [江苏省政府领导工作分工公布](https://so.toutiao.com/search?keyword=江苏省政府领导工作分工公布)
-1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
 1. [法国将恐袭威胁等级调至最高](https://so.toutiao.com/search?keyword=法国将恐袭威胁等级调至最高)
-1. [五旬大姐整形失败怒斥机构是无赖](https://so.toutiao.com/search?keyword=五旬大姐整形失败怒斥机构是无赖)
 1. [中企承建孟加拉国最大铁路项目开通](https://so.toutiao.com/search?keyword=中企承建孟加拉国最大铁路项目开通)
 1. [孙海洋：孙卓是通过人脸识别找到的](https://so.toutiao.com/search?keyword=孙海洋：孙卓是通过人脸识别找到的)
-1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
 1. [男子坚持38天给同事做饭不重样](https://so.toutiao.com/search?keyword=男子坚持38天给同事做饭不重样)
 1. [房子疑存质量问题 工人拆地被发现](https://so.toutiao.com/search?keyword=房子疑存质量问题+工人拆地被发现)
-1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
 1. [华为发布迈向F5.5G六大技术升级](https://so.toutiao.com/search?keyword=华为发布迈向F5.5G六大技术升级)
-1. [长春交通治理引发争议](https://so.toutiao.com/search?keyword=长春交通治理引发争议)
-1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
 1. [肺炎支原体感染有何症状](https://so.toutiao.com/search?keyword=肺炎支原体感染有何症状)
 1. [以军称哈马斯空中部队负责人被打死](https://so.toutiao.com/search?keyword=以军称哈马斯空中部队负责人被打死)
 1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
@@ -64,7 +84,6 @@
 1. [国足战乌兹别克斯坦将主推防守阵型](https://so.toutiao.com/search?keyword=国足战乌兹别克斯坦将主推防守阵型)
 1. [博主揭贵州车站一柜台金镶玉骗局](https://so.toutiao.com/search?keyword=博主揭贵州车站一柜台金镶玉骗局)
 1. [哈尔滨市公安局原副局长曹振河被查](https://so.toutiao.com/search?keyword=哈尔滨市公安局原副局长曹振河被查)
-1. [女子偷玉米被发现下跪求饶](https://so.toutiao.com/search?keyword=女子偷玉米被发现下跪求饶)
 1. [96岁母亲上厕所摔倒60岁女儿扶不动](https://so.toutiao.com/search?keyword=96岁母亲上厕所摔倒60岁女儿扶不动)
 1. [《为有暗香来》开播](https://so.toutiao.com/search?keyword=《为有暗香来》开播)
 1. [C罗将在明年迎来第六届欧洲杯](https://so.toutiao.com/search?keyword=C罗将在明年迎来第六届欧洲杯)
@@ -86,7 +105,6 @@
 1. [美军里根号航母停靠韩国 朝媒回应](https://so.toutiao.com/search?keyword=美军里根号航母停靠韩国+朝媒回应)
 1. [以军用了白磷弹？现场人员闻到蒜味](https://so.toutiao.com/search?keyword=以军用了白磷弹？现场人员闻到蒜味)
 1. [詹姆斯赛前热身各种暴扣应接不暇](https://so.toutiao.com/search?keyword=詹姆斯赛前热身各种暴扣应接不暇)
-1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
 1. [孙红雷起诉游戏公司声音侵权案宣判](https://so.toutiao.com/search?keyword=孙红雷起诉游戏公司声音侵权案宣判)
 1. [季前赛：库明加26分 勇士再胜湖人](https://so.toutiao.com/search?keyword=季前赛：库明加26分+勇士再胜湖人)
 1. [民间流传缠腰龙缠一圈致命是谣言](https://so.toutiao.com/search?keyword=民间流传缠腰龙缠一圈致命是谣言)
@@ -203,7 +221,6 @@
 1. [侯友宜：若胜选将追查绿电和进口蛋](https://so.toutiao.com/search?keyword=侯友宜：若胜选将追查绿电和进口蛋)
 1. [《红毯先生》改编自娱乐圈真实事件](https://so.toutiao.com/search?keyword=《红毯先生》改编自娱乐圈真实事件)
 1. [国防部：中国陆军将赴印尼参加演习](https://so.toutiao.com/search?keyword=国防部：中国陆军将赴印尼参加演习)
-1. [台民调：74.4%支持两岸增进交流](https://so.toutiao.com/search?keyword=台民调：74.4%支持两岸增进交流)
 1. [南京银行：与恒大合作业务规模较小](https://so.toutiao.com/search?keyword=南京银行：与恒大合作业务规模较小)
 1. [台民调：53.4%认为应下架民进党](https://so.toutiao.com/search?keyword=台民调：53.4%认为应下架民进党)
 1. [男子欠30万不还 法院扣押109双球鞋](https://so.toutiao.com/search?keyword=男子欠30万不还+法院扣押109双球鞋)
