--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,43 +1,65 @@
 # 2023-10-14
 
-共 248 条
+共 265 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 18:00:51 GMT+0800 (China Standard Time) -->
-1. [“公募一哥”王亚伟一天内两度发声](https://so.toutiao.com/search?keyword=“公募一哥”王亚伟一天内两度发声)
-1. [女子在景区提醒禁练铁头功处撞破头](https://so.toutiao.com/search?keyword=女子在景区提醒禁练铁头功处撞破头)
+<!-- 最后更新时间 Sat Oct 14 2023 19:00:53 GMT+0800 (China Standard Time) -->
+1. [孙宇鑫父亲今日离世捐献遗体](https://so.toutiao.com/search?keyword=孙宇鑫父亲今日离世捐献遗体)
+1. [中纪委：3个纪委“内鬼”被查](https://so.toutiao.com/search?keyword=中纪委：3个纪委“内鬼”被查)
 1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
-1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
-1. [全国多名纪检干部同日被查](https://so.toutiao.com/search?keyword=全国多名纪检干部同日被查)
-1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
+1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
 1. [景德镇女孩的碎纸图案陶瓷被疯抢](https://so.toutiao.com/search?keyword=景德镇女孩的碎纸图案陶瓷被疯抢)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
+1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
+1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
+1. [赖清德临时取消参加辩论会被批](https://so.toutiao.com/search?keyword=赖清德临时取消参加辩论会被批)
 1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
 1. [官方辟谣女生给男生下毒致身亡](https://so.toutiao.com/search?keyword=官方辟谣女生给男生下毒致身亡)
-1. [哈马斯：巴勒斯坦人不会离开家园](https://so.toutiao.com/search?keyword=哈马斯：巴勒斯坦人不会离开家园)
+1. [巴勒斯坦称或面临第二次浩劫日灾难](https://so.toutiao.com/search?keyword=巴勒斯坦称或面临第二次浩劫日灾难)
 1. [王毅谈巴以冲突症结和出路](https://so.toutiao.com/search?keyword=王毅谈巴以冲突症结和出路)
-1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
-1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
-1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
-1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
-1. [白宇帆宁理携手《繁城之下》破案](https://so.toutiao.com/search?keyword=白宇帆宁理携手《繁城之下》破案)
-1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
-1. [“宝马女”母亲称女婿半年家暴7次](https://so.toutiao.com/search?keyword=“宝马女”母亲称女婿半年家暴7次)
-1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
-1. [男子持刀捅伤妻子 伤者在ICU救治](https://so.toutiao.com/search?keyword=男子持刀捅伤妻子+伤者在ICU救治)
-1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
-1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
-1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
-1. [美19名州长致信拜登要求明确支持以](https://so.toutiao.com/search?keyword=美19名州长致信拜登要求明确支持以)
-1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
-1. [17岁男生杀害65岁房东 已被逮捕](https://so.toutiao.com/search?keyword=17岁男生杀害65岁房东+已被逮捕)
-1. [孙女发现病逝爷爷微信置顶是自己](https://so.toutiao.com/search?keyword=孙女发现病逝爷爷微信置顶是自己)
-1. [证监会调整优化融券相关制度](https://so.toutiao.com/search?keyword=证监会调整优化融券相关制度)
-1. [感受山东大集的人间烟火](https://so.toutiao.com/search?keyword=感受山东大集的人间烟火)
-1. [孙宇鑫父亲今日离世捐献遗体](https://so.toutiao.com/search?keyword=孙宇鑫父亲今日离世捐献遗体)
-1. [侯友宜要赖清德讲清是否反“台独”](https://so.toutiao.com/search?keyword=侯友宜要赖清德讲清是否反“台独”)
 1. [陈奕迅澳门演唱会被要求说国语](https://so.toutiao.com/search?keyword=陈奕迅澳门演唱会被要求说国语)
+1. [普京提出斡旋 哈马斯“高度评价”](https://so.toutiao.com/search?keyword=普京提出斡旋+哈马斯“高度评价”)
+1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
+1. [“公募一哥”王亚伟一天内两度发声](https://so.toutiao.com/search?keyword=“公募一哥”王亚伟一天内两度发声)
+1. [知情人：段暄正配合相关部门调查](https://so.toutiao.com/search?keyword=知情人：段暄正配合相关部门调查)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
+1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
+1. [柯文哲宜兰造势批民进党堕落速度快](https://so.toutiao.com/search?keyword=柯文哲宜兰造势批民进党堕落速度快)
+1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
+1. [以方称击毙哈马斯“精锐突击队”指挥官](https://so.toutiao.com/search?keyword=以方称击毙哈马斯“精锐突击队”指挥官)
+1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
+1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
+1. [哈马斯：巴勒斯坦人不会离开家园](https://so.toutiao.com/search?keyword=哈马斯：巴勒斯坦人不会离开家园)
+1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
+1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
+1. [“宝马女”母亲称女婿半年家暴7次](https://so.toutiao.com/search?keyword=“宝马女”母亲称女婿半年家暴7次)
+1. [侯友宜批民进党让台湾安全受到挑战](https://so.toutiao.com/search?keyword=侯友宜批民进党让台湾安全受到挑战)
+1. [男子持刀捅伤妻子 伤者在ICU救治](https://so.toutiao.com/search?keyword=男子持刀捅伤妻子+伤者在ICU救治)
+1. [外媒：以军向加沙派出首批精锐部队](https://so.toutiao.com/search?keyword=外媒：以军向加沙派出首批精锐部队)
+1. [韩媒担忧拦截系统无法应对朝鲜火炮](https://so.toutiao.com/search?keyword=韩媒担忧拦截系统无法应对朝鲜火炮)
+1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
+1. [高铁静音车厢买票攻略](https://so.toutiao.com/search?keyword=高铁静音车厢买票攻略)
+1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
+1. [华北南部黄淮等地大气扩散条件一般](https://so.toutiao.com/search?keyword=华北南部黄淮等地大气扩散条件一般)
+1. [退休8年 辽宁省公安厅一干部被查](https://so.toutiao.com/search?keyword=退休8年+辽宁省公安厅一干部被查)
+1. [赖清德：不可能期待侯友宜夸奖我](https://so.toutiao.com/search?keyword=赖清德：不可能期待侯友宜夸奖我)
+1. [女子按月还贷银行未收到？法官调解](https://so.toutiao.com/search?keyword=女子按月还贷银行未收到？法官调解)
+1. [孙女发现病逝爷爷微信置顶是自己](https://so.toutiao.com/search?keyword=孙女发现病逝爷爷微信置顶是自己)
+1. [新一轮冷空气到货](https://so.toutiao.com/search?keyword=新一轮冷空气到货)
+1. [华为手机国内销量份额逐周提升](https://so.toutiao.com/search?keyword=华为手机国内销量份额逐周提升)
+1. [感受山东大集的人间烟火](https://so.toutiao.com/search?keyword=感受山东大集的人间烟火)
+1. [女子跳河轻生路过遛狗男子救人](https://so.toutiao.com/search?keyword=女子跳河轻生路过遛狗男子救人)
+1. [男子婚宴用筷子拿烟动作娴熟](https://so.toutiao.com/search?keyword=男子婚宴用筷子拿烟动作娴熟)
+1. [柯文哲：韩国瑜真的很想促成蓝白合](https://so.toutiao.com/search?keyword=柯文哲：韩国瑜真的很想促成蓝白合)
+1. [女子偷玉米被发现下跪求饶](https://so.toutiao.com/search?keyword=女子偷玉米被发现下跪求饶)
+1. [女子在景区提醒禁练铁头功处撞破头](https://so.toutiao.com/search?keyword=女子在景区提醒禁练铁头功处撞破头)
+1. [17岁男生杀害65岁房东 已被逮捕](https://so.toutiao.com/search?keyword=17岁男生杀害65岁房东+已被逮捕)
+1. [全国多名纪检干部同日被查](https://so.toutiao.com/search?keyword=全国多名纪检干部同日被查)
+1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
+1. [白宇帆宁理携手《繁城之下》破案](https://so.toutiao.com/search?keyword=白宇帆宁理携手《繁城之下》破案)
+1. [美19名州长致信拜登要求明确支持以](https://so.toutiao.com/search?keyword=美19名州长致信拜登要求明确支持以)
+1. [证监会调整优化融券相关制度](https://so.toutiao.com/search?keyword=证监会调整优化融券相关制度)
+1. [侯友宜要赖清德讲清是否反“台独”](https://so.toutiao.com/search?keyword=侯友宜要赖清德讲清是否反“台独”)
 1. [外媒：德国同意以军借用2架无人机](https://so.toutiao.com/search?keyword=外媒：德国同意以军借用2架无人机)
 1. [广东男篮：周琦将于14日启程回国](https://so.toutiao.com/search?keyword=广东男篮：周琦将于14日启程回国)
 1. [白百何带二胎儿子出门玩耍](https://so.toutiao.com/search?keyword=白百何带二胎儿子出门玩耍)
@@ -45,21 +67,16 @@
 1. [博雷利此次访华有何目的](https://so.toutiao.com/search?keyword=博雷利此次访华有何目的)
 1. [报告称朝鲜导弹可使美防御系统失效](https://so.toutiao.com/search?keyword=报告称朝鲜导弹可使美防御系统失效)
 1. [河南一男子误喝汽车防冻液身亡](https://so.toutiao.com/search?keyword=河南一男子误喝汽车防冻液身亡)
-1. [华北南部黄淮等地大气扩散条件一般](https://so.toutiao.com/search?keyword=华北南部黄淮等地大气扩散条件一般)
-1. [赖清德：不可能期待侯友宜夸奖我](https://so.toutiao.com/search?keyword=赖清德：不可能期待侯友宜夸奖我)
 1. [哈登：与莫雷绝无重修旧好可能](https://so.toutiao.com/search?keyword=哈登：与莫雷绝无重修旧好可能)
 1. [舒默将率领美国国会代表团访以色列](https://so.toutiao.com/search?keyword=舒默将率领美国国会代表团访以色列)
-1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
 1. [CBA联赛21日将正式开赛](https://so.toutiao.com/search?keyword=CBA联赛21日将正式开赛)
 1. [孙海洋：孙卓是通过人脸识别找到的](https://so.toutiao.com/search?keyword=孙海洋：孙卓是通过人脸识别找到的)
 1. [加沙断电了医院的新生儿怎么办](https://so.toutiao.com/search?keyword=加沙断电了医院的新生儿怎么办)
-1. [柯文哲宜兰造势批民进党堕落速度快](https://so.toutiao.com/search?keyword=柯文哲宜兰造势批民进党堕落速度快)
 1. [“多尔衮行宫”报价1.8亿挂牌出售](https://so.toutiao.com/search?keyword=“多尔衮行宫”报价1.8亿挂牌出售)
 1. [BBC记者在以色列被警察持枪袭击](https://so.toutiao.com/search?keyword=BBC记者在以色列被警察持枪袭击)
 1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
 1. [1名记者死于以方炮击 古特雷斯致哀](https://so.toutiao.com/search?keyword=1名记者死于以方炮击+古特雷斯致哀)
 1. [数名欲从黎进入以的武装人员被打死](https://so.toutiao.com/search?keyword=数名欲从黎进入以的武装人员被打死)
-1. [女子偷玉米被发现下跪求饶](https://so.toutiao.com/search?keyword=女子偷玉米被发现下跪求饶)
 1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
 1. [一带一路帮中亚国家更好与世界接轨](https://so.toutiao.com/search?keyword=一带一路帮中亚国家更好与世界接轨)
 1. [保罗：这不是我第一次换队](https://so.toutiao.com/search?keyword=保罗：这不是我第一次换队)
