--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,55 +1,73 @@
 # 2023-10-14
 
-共 296 条
+共 312 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 21:01:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 14 2023 22:00:41 GMT+0800 (China Standard Time) -->
 1. [医生解读奥运冠军杨威为何佩戴呼吸机](https://so.toutiao.com/search?keyword=医生解读奥运冠军杨威为何佩戴呼吸机)
-1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
-1. [首批亚残运会运动员今日到达](https://so.toutiao.com/search?keyword=首批亚残运会运动员今日到达)
-1. [中纪委：3个纪委“内鬼”被查](https://so.toutiao.com/search?keyword=中纪委：3个纪委“内鬼”被查)
 1. [景德镇女孩的碎纸图案陶瓷被疯抢](https://so.toutiao.com/search?keyword=景德镇女孩的碎纸图案陶瓷被疯抢)
-1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
+1. [首批亚残运会运动员今日到达](https://so.toutiao.com/search?keyword=首批亚残运会运动员今日到达)
+1. [湖南一女生宿舍内死亡 排除刑案](https://so.toutiao.com/search?keyword=湖南一女生宿舍内死亡+排除刑案)
+1. [餐厅单价16元水蒸蛋仅一层蛋皮](https://so.toutiao.com/search?keyword=餐厅单价16元水蒸蛋仅一层蛋皮)
 1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
-1. [女子在景区提醒禁练铁头功处撞破头](https://so.toutiao.com/search?keyword=女子在景区提醒禁练铁头功处撞破头)
 1. [王毅：巴以冲突面临失控风险](https://so.toutiao.com/search?keyword=王毅：巴以冲突面临失控风险)
+1. [“公募一哥”王亚伟一天内两度发声](https://so.toutiao.com/search?keyword=“公募一哥”王亚伟一天内两度发声)
+1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
 1. [官方辟谣女生给男生下毒致身亡](https://so.toutiao.com/search?keyword=官方辟谣女生给男生下毒致身亡)
-1. [陈奕迅澳门演唱会被要求说国语](https://so.toutiao.com/search?keyword=陈奕迅澳门演唱会被要求说国语)
 1. [王毅谈巴以冲突症结和出路](https://so.toutiao.com/search?keyword=王毅谈巴以冲突症结和出路)
 1. [巴勒斯坦称或面临第二次浩劫日灾难](https://so.toutiao.com/search?keyword=巴勒斯坦称或面临第二次浩劫日灾难)
-1. [餐厅单价16元水蒸蛋仅一层蛋皮](https://so.toutiao.com/search?keyword=餐厅单价16元水蒸蛋仅一层蛋皮)
+1. [三国同意外国人经拉法口岸离开加沙](https://so.toutiao.com/search?keyword=三国同意外国人经拉法口岸离开加沙)
 1. [哈马斯：巴勒斯坦人不会离开家园](https://so.toutiao.com/search?keyword=哈马斯：巴勒斯坦人不会离开家园)
-1. [“公募一哥”王亚伟一天内两度发声](https://so.toutiao.com/search?keyword=“公募一哥”王亚伟一天内两度发声)
+1. [陈奕迅澳门演唱会被要求说国语](https://so.toutiao.com/search?keyword=陈奕迅澳门演唱会被要求说国语)
+1. [巴以冲突会在中东扩大化吗](https://so.toutiao.com/search?keyword=巴以冲突会在中东扩大化吗)
+1. [王毅谈巴以冲突：应尽快停火止战](https://so.toutiao.com/search?keyword=王毅谈巴以冲突：应尽快停火止战)
+1. [17岁男生杀害65岁房东 已被逮捕](https://so.toutiao.com/search?keyword=17岁男生杀害65岁房东+已被逮捕)
+1. [埃及援巴勒斯坦的人道主义车队出发](https://so.toutiao.com/search?keyword=埃及援巴勒斯坦的人道主义车队出发)
 1. [河南一男子误喝汽车防冻液身亡](https://so.toutiao.com/search?keyword=河南一男子误喝汽车防冻液身亡)
+1. [当地回应玉米地遭500余人哄抢](https://so.toutiao.com/search?keyword=当地回应玉米地遭500余人哄抢)
+1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
+1. [当中国游客在异国街头碰见中国警察](https://so.toutiao.com/search?keyword=当中国游客在异国街头碰见中国警察)
+1. [中纪委：3个纪委“内鬼”被查](https://so.toutiao.com/search?keyword=中纪委：3个纪委“内鬼”被查)
+1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
+1. [“宝马女”母亲称女婿半年家暴7次](https://so.toutiao.com/search?keyword=“宝马女”母亲称女婿半年家暴7次)
+1. [男子持刀捅伤妻子 伤者在ICU救治](https://so.toutiao.com/search?keyword=男子持刀捅伤妻子+伤者在ICU救治)
+1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
+1. [李大霄：证监会优化融券制度是利好](https://so.toutiao.com/search?keyword=李大霄：证监会优化融券制度是利好)
+1. [女子在景区提醒禁练铁头功处撞破头](https://so.toutiao.com/search?keyword=女子在景区提醒禁练铁头功处撞破头)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
+1. [孙宇鑫父亲今日离世捐献遗体](https://so.toutiao.com/search?keyword=孙宇鑫父亲今日离世捐献遗体)
+1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
+1. [新组建的国家数据局启动招聘](https://so.toutiao.com/search?keyword=新组建的国家数据局启动招聘)
+1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
+1. [中国公民在厄瓜多尔坠入峡谷身亡](https://so.toutiao.com/search?keyword=中国公民在厄瓜多尔坠入峡谷身亡)
+1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
+1. [乔纳森·米兰获环广西第二赛段冠军](https://so.toutiao.com/search?keyword=乔纳森·米兰获环广西第二赛段冠军)
+1. [台退将呼吁两岸应避战求和](https://so.toutiao.com/search?keyword=台退将呼吁两岸应避战求和)
+1. [专家：胰腺癌早期容易被当成胃病](https://so.toutiao.com/search?keyword=专家：胰腺癌早期容易被当成胃病)
+1. [女子按月还贷银行未收到？法官调解](https://so.toutiao.com/search?keyword=女子按月还贷银行未收到？法官调解)
+1. [黑土地丰收背后的科技密码](https://so.toutiao.com/search?keyword=黑土地丰收背后的科技密码)
+1. [本以为跳高冠军非我莫属](https://so.toutiao.com/search?keyword=本以为跳高冠军非我莫属)
+1. [博主救助儿童却成现实版农夫与蛇](https://so.toutiao.com/search?keyword=博主救助儿童却成现实版农夫与蛇)
+1. [白百何带二胎儿子出门玩耍](https://so.toutiao.com/search?keyword=白百何带二胎儿子出门玩耍)
+1. [美19名州长致信拜登要求明确支持以](https://so.toutiao.com/search?keyword=美19名州长致信拜登要求明确支持以)
+1. [美国共和党提名乔丹担任众议院议长](https://so.toutiao.com/search?keyword=美国共和党提名乔丹担任众议院议长)
+1. [天工大自己的林俊杰和邓紫棋](https://so.toutiao.com/search?keyword=天工大自己的林俊杰和邓紫棋)
+1. [中甲：南京城市1-0青岛西海岸](https://so.toutiao.com/search?keyword=中甲：南京城市1-0青岛西海岸)
+1. [江西省委组织部发8名干部任前公示](https://so.toutiao.com/search?keyword=江西省委组织部发8名干部任前公示)
+1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
 1. [巴以冲突已造成超3500人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成超3500人死亡)
 1. [年轻人为何花钱来伍佰演唱会唱歌](https://so.toutiao.com/search?keyword=年轻人为何花钱来伍佰演唱会唱歌)
-1. [孙宇鑫父亲今日离世捐献遗体](https://so.toutiao.com/search?keyword=孙宇鑫父亲今日离世捐献遗体)
-1. [“宝马女”母亲称女婿半年家暴7次](https://so.toutiao.com/search?keyword=“宝马女”母亲称女婿半年家暴7次)
 1. [问界新M7爆单余承东进厂保交付](https://so.toutiao.com/search?keyword=问界新M7爆单余承东进厂保交付)
-1. [白百何带二胎儿子出门玩耍](https://so.toutiao.com/search?keyword=白百何带二胎儿子出门玩耍)
-1. [17岁男生杀害65岁房东 已被逮捕](https://so.toutiao.com/search?keyword=17岁男生杀害65岁房东+已被逮捕)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
-1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
 1. [电影《我本是高山》发布新剧照](https://so.toutiao.com/search?keyword=电影《我本是高山》发布新剧照)
-1. [专家：胰腺癌早期容易被当成胃病](https://so.toutiao.com/search?keyword=专家：胰腺癌早期容易被当成胃病)
 1. [中方愿与欧盟共同推动巴以局势缓和](https://so.toutiao.com/search?keyword=中方愿与欧盟共同推动巴以局势缓和)
-1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
-1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
-1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
-1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
 1. [蔡英文表弟公司抢下6亿潜艇大单](https://so.toutiao.com/search?keyword=蔡英文表弟公司抢下6亿潜艇大单)
 1. [咸阳一水库发生坍塌房屋被冲破](https://so.toutiao.com/search?keyword=咸阳一水库发生坍塌房屋被冲破)
-1. [男子持刀捅伤妻子 伤者在ICU救治](https://so.toutiao.com/search?keyword=男子持刀捅伤妻子+伤者在ICU救治)
 1. [社保缴15年和25年待遇差别有多大](https://so.toutiao.com/search?keyword=社保缴15年和25年待遇差别有多大)
 1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
 1. [华为手机国内销量份额逐周提升](https://so.toutiao.com/search?keyword=华为手机国内销量份额逐周提升)
-1. [女子按月还贷银行未收到？法官调解](https://so.toutiao.com/search?keyword=女子按月还贷银行未收到？法官调解)
 1. [安理会就乌克兰局势举行公开会](https://so.toutiao.com/search?keyword=安理会就乌克兰局势举行公开会)
 1. [河南郸城一玉米地被村民集体哄抢](https://so.toutiao.com/search?keyword=河南郸城一玉米地被村民集体哄抢)
-1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
 1. [今年天猫双11主推“全网最低价”](https://so.toutiao.com/search?keyword=今年天猫双11主推“全网最低价”)
-1. [美19名州长致信拜登要求明确支持以](https://so.toutiao.com/search?keyword=美19名州长致信拜登要求明确支持以)
-1. [黑土地丰收背后的科技密码](https://so.toutiao.com/search?keyword=黑土地丰收背后的科技密码)
 1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
 1. [一架载有医疗物资的飞机在埃及降落](https://so.toutiao.com/search?keyword=一架载有医疗物资的飞机在埃及降落)
 1. [武大被骚扰当事人回应肖某某记过](https://so.toutiao.com/search?keyword=武大被骚扰当事人回应肖某某记过)
@@ -57,10 +75,8 @@
 1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
 1. [以方称击毙哈马斯“精锐突击队”指挥官](https://so.toutiao.com/search?keyword=以方称击毙哈马斯“精锐突击队”指挥官)
 1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
-1. [王毅谈巴以冲突：应尽快停火止战](https://so.toutiao.com/search?keyword=王毅谈巴以冲突：应尽快停火止战)
 1. [埃及：须停止在加沙的地面军事行动](https://so.toutiao.com/search?keyword=埃及：须停止在加沙的地面军事行动)
 1. [高铁静音车厢买票攻略](https://so.toutiao.com/search?keyword=高铁静音车厢买票攻略)
-1. [美国共和党提名乔丹担任众议院议长](https://so.toutiao.com/search?keyword=美国共和党提名乔丹担任众议院议长)
 1. [江西一直升机迫降稻田机上人员平安](https://so.toutiao.com/search?keyword=江西一直升机迫降稻田机上人员平安)
 1. [日称将向吉布提派飞机协助从以撤侨](https://so.toutiao.com/search?keyword=日称将向吉布提派飞机协助从以撤侨)
 1. [西安的文化和美食有多美](https://so.toutiao.com/search?keyword=西安的文化和美食有多美)
